# AutoGitSync

./: .gitignore  Cargo.toml  LICENSE  README.md
code_auto_back_uper/: Cargo.toml
code_auto_back_uper/src/: backup_executor.rs  backup_runtime.rs  config_manager.rs  cross_platform_constant.rs  file_change_watcher.rs  gitignore_wrapper.rs  main.rs  main_noti_example.rs  main_test_gitignore.rs  main_test_notify.rs  repository_instance.rs  temp_clone_repo.rs
code_auto_back_uper/src/data_structures/: config.rs
code_auto_back_uper/src/gui/: hello_world_popup.rs
code_auto_back_uper/src/iced_gui/: hello_world_popup.rs  mod.rs
code_auto_back_uper/src/utilities/: file_system.rs  git2_api_wrapper.rs  mod.rs
code_auto_back_uper/test_git_ignore_crate/: .gitignore
src/: backup_executor.rs  config_manager.rs  cross_platform_constant.rs  file_change_watcher.rs  gitignore_wrapper.rs  keyring_example.rs  main.rs  main_git_test.rs  main_test_noti.rs  repository_instance.rs  temp_clone_repo.rs  tool_initialiser.rs
src/data_structures/: config.rs
src/utilities/: copy_dir_api_wrapper.rs  file_locker.rs  file_system.rs  git2_api_wrapper.rs  mod.rs  notification_service.rs  secret_manager.rs
