[package]
name = "code_auto_back_uper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
copy_dir = "0.1.3"
dirs = "5.0.1"
git2 = "0.18.2"
gitignored = "0.4.0"
keyring = "2.3.2"
magic-crypt = "3.1.13"
notify = "6.1.1"
notify-rust = "4.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structopt = "0.3.26"
sys-info = "0.9.1"
