[package]
name = "code_auto_back_uper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
dirs = "5.0.1"
eframe = "0.26.2"
egui = "0.26.2"
git2 = "0.18.2"
magic-crypt = "3.1.13"
notify = "6.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
structopt = "0.3.26"
sys-info = "0.9.1"
